# nrf5_sdk_in_cmake

./: .gitignore  CMakeLists.txt  README.md
apps/blinky/: CMakeLists.txt
apps/blinky/blinky-prefix/src/blinky-build/blinky-prefix/src/blinky-stamp/: blinky-source_dirinfo.txt
apps/blinky/blinky-prefix/src/blinky-build/blinky-prefix/tmp/: blinky-mkdirs.cmake
apps/blinky/blinky-prefix/tmp/: blinky-mkdirs.cmake
apps/blinky/nordic/: CMakeLists.txt
apps/blinky/pca10059/s140/armgcc/: Makefile
